# PRNG_mini

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
include/: PRNG_mini.h
src/: CMakeLists.txt  PRNG_mini.c
tests/general_test/: CMakeLists.txt  main.c
tests/license_key/: CMakeLists.txt  main.c
tests/randomness/: CMakeLists.txt  main.c
tools/: linuxbuild.sh  linuxbuild_so.sh  winbuild.bat  winbuild_dll.bat
